# brainfuck-wasm-svelte

./: .gitignore  Dockerfile  LICENSE  README.md  heroku.yml  main.js  package-lock.json  package.json
app/: package-lock.json  package.json
app/public/: index.html
app/src/: App.svelte  BfInterface.svelte  BfMachineState.svelte  BfProgramInputBox.svelte  inputStore.js  main.js  presets.js
app/src/greeting/src/: lib.rs
app/src/greeting/tests/: tests.rs
src/: App.svelte  BfInterface.svelte  BfMachineState.svelte  main.js
src/greeting/: Cargo.toml
src/greeting/src/: lib.rs
src/greeting/tests/: tests.rs
